--- a/notebooks/markers-cluster12.Rmd
+++ b/notebooks/markers-cluster12.Rmd
@@ -3,6 +3,9 @@ title: "R Notebook"
 output:
   html_document:
     df_print: paged
+    toc: true
+    toc_float: 
+      smooth_scroll: true
 ---
 
 
